name:                ondesked
version:             0.1.0.0
synopsis:            Processing some csv data
description:         Baseball data analysis
homepage:            bitemyapp.com
license:             BSD3
license-file:        LICENSE
author:              Nahiyan Alamgir
maintainer:          nahiyan.alamgir@northsouth.edu
copyright:           2019, Nahiyan Alamgir
category:            Data
build-type:          Simple
cabal-version:       >=1.10

executable ondesked
  ghc-options:          -Wall
  hs-source-dirs:       src
  main-is:              Main.hs
  build-depends:        base >= 4.7 && <5,
                        bytestring,
                        xeno,
                        utf8-string,
                        utility-ht,
                        split,
                        process,
                        hsdev,
                        text,
                        casing

  default-language:     Haskell2010
  other-modules:        Element,
                        Types,
                        App,
                        Common,
                        Frame,
                        BoxSizer,
                        Panel,
                        Button,
                        Textarea,
                        File,
                        MenuBar,
                        Menu,
                        Text,
                        Textfield,
                        CollapsiblePane,
                        CollapsiblePanePane,
                        Table,
                        TableColumn,
                        TableRow,
                        TableItem,
                        MenuItem